# String

./: CMakeLists.txt  main.c
string/: string_.c  string_.h
string/tasks/: addToAStringContainingFewerWords.h  convertStringDigitsTheEnd.h  countOfPalindromeWords.h  digitCorrespondingNumberOfSpaces.h  getStringFromTheWordsOfDifferentFromTheLastWord.h  getWordBeforeFirstWordWithA.h  isEachLetterOfTheWordIncludedInTheString.h  isIdenticalWordsInString.h  isPairOfWordsMadeOfIdenticalLetters.h  isWordsLexicographicallyOrdered.h  lastWordInFirstStringInSecondString.h  lastWordInTheFirstLineThatIsInTheSecondLine.h  mergingStrings.h  removeExtraSpaces.h  removeNonLetters.h  removeWordsThatMatchLastWord.h  replace.h  reverseWordOrderInAString.h  wordsReverseOrder.h
